--- a/platforms/common/build.gradle
+++ b/platforms/common/build.gradle
@@ -1,67 +1,23 @@
-apply plugin: 'fabric-loom'
+apply from: rootProject.file('gradle/scripts/common.gradle')
 
-loom {
-    if(getRootProject().file("${AW_FILE}").exists()) {
-        accessWidenerPath = getRootProject().file("${AW_FILE}")
-    }
+def FF_modules = [ ]
 
-    mixin.defaultRefmapName = "${MOD_ID}.refmap.json"
-}
+rootProject.childProjects.values().forEach { prj ->
+    if(prj.path.endsWithIgnoreCase('-common')) {
+        def moduleName = prj.path.substring(1, prj.path.indexOf('-'))
 
-repositories {
-    exclusiveContent {
-        forRepository { maven { url 'https://repo.spongepowered.org/repository/maven-public' } }
-        filter { includeGroupByRegex 'org\\.spongepowered.*' }
-    }
-}
-
-dependencies {
-    minecraft "com.mojang:minecraft:${MINECRAFT_VERSION}"
-
-    mappings(loom.layered {
-        officialMojangMappings()
-
-        if(rootProject.hasProperty('PARCHMENT_MAPPINGS')) {
-            if(rootProject.hasProperty('PARCHMENT_DEV_MINECRAFT_VERSION')) {
-                parchment("org.parchmentmc.data:parchment-${PARCHMENT_DEV_MINECRAFT_VERSION}:${PARCHMENT_MAPPINGS}@zip")
-            } else {
-                parchment("org.parchmentmc.data:parchment-${MINECRAFT_VERSION}:${PARCHMENT_MAPPINGS}@zip")
-            }
+        if(!FF_modules.contains(moduleName)) {
+            FF_modules.add(moduleName)
         }
-    })
-
-    compileOnly "org.spongepowered:mixin:${MIXIN_VERSION}"
-
-    if(rootProject.hasProperty('APEXCORE_DEV_VERSION')) {
-        modImplementation "xyz.apex.minecraft.apexcore:apexcore-common:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}"
-    } else {
-        modImplementation "xyz.apex.minecraft.apexcore:apexcore-common:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
     }
-
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
-    compileOnly 'com.google.errorprone:error_prone_annotations:2.11.0'
 }
 
-remapJar.enabled = false
-remapSourcesJar.enabled = false;
-
-jar {
-    archiveClassifier = ''
-}
-
-collectJars {
-    def tasks = [ jar, sourcesJar ]
-    dependsOn tasks
-    from tasks
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            loom.disableDeprecatedPomGeneration(it)
-
-            artifact jar
-            artifact sourcesJar
+afterEvaluate {
+    [ 'compileJava', 'processResources', 'classes' ].forEach { taskName ->
+        tasks.getByName(taskName) { task ->
+            FF_modules.forEach { module ->
+                finalizedBy(":${module}-common:${taskName}")
+            }
         }
     }
 }
