--- a/modules/nordic/fabric/build.gradle
+++ b/modules/nordic/fabric/build.gradle
@@ -2,7 +2,7 @@ apply from: rootProject.file('gradle/scripts/fabric.gradle')
 
 dependencies {
     compileOnly project(path: ':nordic-common', configuration: 'namedElements')
-    compileOnly project(':fabric')
+    implementation project(path: ':fabric', configuration: 'namedElements')
     include project(':fabric')
 }
 
