Update to 1.20.1  (Allow running on 1.20)

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ AW_FILE=platforms/fabric/src/main/resources/fantasyfurniture.accesswidener
 AT_FILE=platforms/forge/src/main/resources/META-INF/accesstransformer.cfg
 
 # Vanilla
-MINECRAFT_VERSION=1.20
+MINECRAFT_VERSION=1.20.1
 MINECRAFT_VERSION_RANGE=[1.20,)
 
 # Parchment
@@ -25,19 +25,19 @@ PARCHMENT_MAPPINGS=2023.03.12
 PARCHMENT_DEV_MINECRAFT_VERSION=1.19.3
 
 # Forge
-FORGE_VERSION=46.0.13
-# FORGE_DEV_VERSION=46.0.13
+FORGE_VERSION=46.0.0
+FORGE_DEV_VERSION=47.0.19
 FORGE_LOADER_VERSION=46
-FORGE_VERSION_RANGE=[46.0.0,47.0.0)
+FORGE_VERSION_RANGE=[46.0.0,48.0.0)
 
 # Fabric
 FABRIC_LOADER_VERSION=0.14.21
-FABRIC_API_VERSION=0.83.0
+FABRIC_API_VERSION=0.84.0
 
 # ApexCore
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=9.0.0
-APEXCORE_DEV_VERSION=9.0.1
+# APEXCORE_DEV_VERSION=9.0.0
 APEXCORE_VERSION_RANGE=[9.0.0,10.0.0)
 
 # Dependencies
