Update to 1.20.1 parchment mappings

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,8 @@ MINECRAFT_VERSION=1.20.1
 MINECRAFT_VERSION_RANGE=[1.20,)
 
 # Parchment
-PARCHMENT_MAPPINGS=2023.03.12
-PARCHMENT_DEV_MINECRAFT_VERSION=1.19.3
+PARCHMENT_MAPPINGS=2023.06.26
+# PARCHMENT_DEV_MINECRAFT_VERSION=1.20.1
 
 # Forge
 FORGE_VERSION=46.0.0
