Make use of Forge Feature system to ensure user is running with java version mod is compiled against

--- a/platforms/forge/src/main/resources/META-INF/mods.toml
+++ b/platforms/forge/src/main/resources/META-INF/mods.toml
@@ -15,6 +15,9 @@ issueTrackerURL="https://discord.apexstudios.dev/"
 	description="${MOD_DESCRIPTION}"
 	displayTest="MATCH_VERSION"
 
+[features."${MOD_ID}"]
+	javaVersion="${JAVA_VERSION}"
+
 [[dependencies."${MOD_ID}"]]
 	modId="forge"
 	mandatory=true
