--- a/workspace/forge/src/main/resources/META-INF/mods.toml
+++ b/workspace/forge/src/main/resources/META-INF/mods.toml
@@ -15,6 +15,9 @@ issueTrackerURL="https://discord.apexstudios.dev/"
 	description="${MOD_DESCRIPTION}"
 	displayTest="MATCH_VERSION"
 
+[features."${MOD_ID}"]
+	javaVersion="${JAVA_VERSION}"
+
 [[dependencies."${MOD_ID}_complete"]]
 	modId="forge"
 	mandatory=true
