Migrate over to using NeoForge rather than MinecraftForge.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'net.minecraftforge.gradle' version '[6.0,6.2)' apply false
+    id 'net.neoforged.gradle' version '[6.0.18,6.2)' apply false
     id 'org.parchmentmc.librarian.forgegradle' version '1.+' apply false
     id 'org.spongepowered.mixin' version '0.7.+' apply false
     id 'fabric-loom' version '1.2-SNAPSHOT' apply false
