--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ MIXIN_VERSION=0.8.4
 
 AW_FILE=platforms/fabric/src/main/resources/fantasyfurniture.accesswidener
 # Note: while this is specified here, the path can not be changed, due to forge hard coding the path internally
-AT_FILE=platforms/forge/src/main/resources/META-INF/accesstransformer.cfg
+AT_FILE=platforms/neoforge/src/main/resources/META-INF/accesstransformer.cfg
 
 # Vanilla
 MINECRAFT_VERSION=1.20.1
@@ -24,11 +24,11 @@ MINECRAFT_VERSION_RANGE=[1.20,)
 PARCHMENT_MAPPINGS=2023.06.26
 # PARCHMENT_DEV_MINECRAFT_VERSION=1.20.1
 
-# Forge
-FORGE_VERSION=46.0.0
-FORGE_DEV_VERSION=47.0.19
-FORGE_LOADER_VERSION=46
-FORGE_VERSION_RANGE=[46.0.0,48.0.0)
+# NeoForge
+NEOFORGE_VERSION=47.1.0
+NEOFORGE_DEV_VERSION=47.1.28
+NEOFORGE_LOADER_VERSION=47
+NEOFORGE_VERSION_RANGE=[47.0.0,48.0.0)
 
 # Fabric
 FABRIC_LOADER_VERSION=0.14.21
