--- a/settings.gradle
+++ b/settings.gradle
@@ -37,6 +37,10 @@ pluginManagement {
     }
 }
 
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
+
 def platforms = [
         'common',
         'neoforge',
