--- a/platforms/neoforge/build.gradle
+++ b/platforms/neoforge/build.gradle
@@ -16,6 +16,7 @@ minecraft {
 
             args '--mod', MOD_ID, '--client', '--server', '--validate'
             args '--output', project(':common').file('src/generated/resources')
+            args '--input', file('blockbench')
             args '--existing', project(':common').file('src/main/resources/')
             args '--existing', file('src/main/resources/')
             args '--existing-mod', "${APEXCORE_ID}"
