--- a/scripts/neoforge.gradle
+++ b/scripts/neoforge.gradle
@@ -31,42 +31,6 @@ minecraft {
             ideaModule "${rootProject.name}.${project.name}.main"
             jvmArg '-XX:+AllowEnhancedClassRedefinition' // requires JBR
             folderName 'neoforge'
-
-            mods {
-                "${MOD_ID}" {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        client {
-            workingDirectory file('run/client')
-        }
-
-        if(rootProject.hasProperty('DEVLOGIN_VERSION')) {
-            clientLogin {
-                parent runs.client
-                main 'net.covers1624.devlogin.DevLogin'
-                args '--launch_target', '{LAUNCH_TARGET}'
-                lazyToken("LAUNCH_TARGET", { runs.client.main })
-            }
-        }
-
-        server {
-            workingDirectory file('run/server')
-            args 'nogui'
-        }
-
-        data {
-            workingDirectory file('run/client')
-
-            args '--mod', MOD_ID, '--client', '--server', '--validate'
-            args '--output', project(':common').file('src/generated/resources')
-            args '--existing', project(':common').file('src/main/resources/')
-            args '--existing', file('src/main/resources/')
-            args '--existing-mod', APEXCORE_ID
-
-            property "${MOD_ID}.test_elements.enabled", 'true'
         }
     }
 }
@@ -98,39 +62,30 @@ dependencies {
         if(APEXCORE_DEV_VERSION.endsWithIgnoreCase('-SNAPSHOT')) {
             implementation fg.deobf("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}")
 
-            jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}") {
+            // TODO:
+            /*jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}") {
                 jarJar.ranged(it, "${APEXCORE_VERSION_RANGE}")
-            }
+            }*/
         } else {
             implementation fg.deobf("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}")
 
-            jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}") {
+            // TODO:
+            /*jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}") {
                 jarJar.ranged(it, "${APEXCORE_VERSION_RANGE}")
-            }
+            }*/
         }
     } else {
         implementation fg.deobf("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}")
 
-        jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") {
+        // TODO:
+        /*jarJar("xyz.apex.minecraft.apexcore:apexcore-neoforge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") {
             jarJar.ranged(it, "${APEXCORE_VERSION_RANGE}")
-        }
+        }*/
     }
 
     if(rootProject.hasProperty('DEVLOGIN_VERSION')) {
         runtimeOnly "net.covers1624:DevLogin:${DEVLOGIN_VERSION}"
     }
-}
-
-processResources {
-    from project(':common').sourceSets.main.resources
-}
-
-compileJava {
-    source project(':common').sourceSets.main.allSource
-}
-
-sourcesJar {
-    from project(':common').sourceSets.main.allJava
 }
 
 tasks.jarJar.configure {
@@ -177,7 +132,7 @@ publishing {
 publishMods {
     file = remapJar.archiveFile
     changelog = rootProject.file('changelogs/changelog.md').exists() ? rootProject.file('changelogs/changelog.md').getText('UTF-8') : ''
-    type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}")
+    // type = me.modmuss50.mpp.ReleaseType.of("${MOD_RELEASE_TYPE}") // TODO: Figure out why this cant be referenced
     maxRetries = 5
     version = "${MOD_FULL_VERSION}"
     displayName = "[NeoForge] ${MOD_NAME} - ${MOD_FULL_VERSION}+${MINECRAFT_VERSION}"
