Fix typo in dependency declaration Fix Jenkins not generating resources for other modules

--- a/projects/complete/fabric/build.gradle
+++ b/projects/complete/fabric/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 
     children.forEach { child ->
         implementation project(path: ":${child}-common", configuration: 'namedElements')
-        include project(":${child}-common")
+        include project(":${child}-fabric")
     }
 }
 
