--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'net.neoforged.gradle' version '[6.0.18,6.2)' apply false
+	id 'net.minecraftforge.gradle' version '[6.0,6.2)' apply false
 	id 'org.parchmentmc.librarian.forgegradle' version '1.+' apply false
 	id 'org.spongepowered.mixin' version '0.7.+' apply false
 	id 'fabric-loom' version '1.3-SNAPSHOT' apply false
@@ -192,7 +193,7 @@ tasks.register('sendDiscordChangelog') {
 					'modrinth': '<:modrinth:1087664953235869696>',
 					'curseforge': '<:curseforge:1087664975121752085>',
 					'minecraft': '<:minecraft:1087669093974421544>',
-					'minecraftforge': '<:forge:1087669091487195205>',
+					'mcforge': '<:forge:1087669091487195205>',
 					'neoforge': '<:neoforge:1138457156757241918>',
 					'fabric': '<:fabric:1107901914923925585>',
 					'github': '<:github:1087671203642216521>'
@@ -201,7 +202,7 @@ tasks.register('sendDiscordChangelog') {
 					/*'modrinth': '<:modrinth:1087665302067740722>',
                     'curseforge': '<:curseforge:1087665287186366504>',
                     'minecraft': '<:minecraft:1087667250565226536>',
-                    'minecraftforge': '<:forge:1087667248371605524>',
+                    'mcforge': '<:forge:1087667248371605524>',
                     'neoforge': '<:neoforge:1138456184618242189>',
                     'fabric': '<:fabric:1138459723314769950>',
                     'github': '<:github:1087671103360614400>'*/
@@ -231,14 +232,13 @@ tasks.register('sendDiscordChangelog') {
 				])
 			}
 
-			// Uncomment if we ever decide to support MCF
-			/*if(findProject(':forge') != null) {
-                fields.add([
-                    name: "${emojis['minecraftforge']} MinecraftForge",
-                    value: "[${NEOFORGE_VERSION}](https://files.minecraftforge.net/net/minecraftforge/forge/index_${MINECRAFT_VERSION}.html)",
-                    inline: true
-                ])
-            }*/
+			if(findProject(':mcforge') != null) {
+				fields.add([
+						name: "${emojis['mcforge']} MinecraftForge",
+						value: "[${MCFORGE_VERSION}](https://files.minecraftforge.net/net/minecraftforge/forge/index_${MINECRAFT_VERSION}.html)",
+						inline: true
+				])
+			}
 
 			def body = [
 					username: 'ApexStudios',
@@ -308,7 +308,7 @@ idea.module {
 			file('gradle')
 	]
 
-	[ 'fabric', 'neoforge' ].forEach {
+	[ 'fabric', 'neoforge', 'mcforge' ].forEach {
 		if(findProject(":${it}") == null) {
 			excludeDirs += [ file("projects/complete/${it}"), file("projects/modules/nordic/${it}"), file("projects/platforms/${it}") ]
 		}
